apps/homerun2/components/wled-mock/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-wled-mock
  namespace: ${HOMERUN2_NAMESPACE:-homerun2}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_WLED_MOCK_HOSTNAME:-wled-mock}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-wled-mock
          port: 80
